k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 1
  template:
    metadata:
      labels:
        app: goserver
    spec:
      containers:
        - name: goserver
          image: "rogervv/hello-go:v5"

          # resources para cada pod
          # vCPU -> 1000m (milicores)
          # fazer benchmarks para chegar nesses números
          resources:
            requests:       # mínimo necessário para rodar (RESERVA ISSO NO POD)
              cpu: "50m"
              memory: 20Mi
            limits:         # até onde pode ir de limite
              cpu: "50m"
              memory: 25Mi

          # startupProbe  (garante a inicialização)
          startupProbe:
            httpGet:
              path: /healthz
              port: 8080        # porta do container
            periodSeconds: 3
            failureThreshold: 30      # faz 30 verificações de 3 segundos para reiniciar o container

          # readiness  (tira o tráfego da aplicação)
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080        # porta do container
            periodSeconds: 3
            failureThreshold: 3      # faz 3 verificações dos 3 segundos para reiniciar o container

          # liveness (recria o processo)
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080        # porta do container
            periodSeconds: 5
            failureThreshold: 1     # faz 3 verificações dos 5 segundos para reiniciar o container
            timeoutSeconds: 1
            successThreshold: 1     # faz 3 verificações de timeout de 1 segundo

          volumeMounts:
            - mountPath: "/go/languages"
              name: config
              readOnly: true
            - mountPath: "/go/pvc"
              name: goserver-volume

      # cria o volume para injetar o configmap na aplicação
      volumes:
        - name: goserver-volume
          persistentVolumeClaim:
            claimName: goserver-pvc

        - name: config
          configMap:
            name: configmap-languages
            items:
            - key: languages
              path: "languages.txt"
