k8s/mysql-service-h.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h      # o nome precisa de ser igual o statefuset
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  clusterIP: None
