k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver       # aplicação do deployment.yaml
  type: ClusterIP
  ports:
    - name: goserver-service
      port: 80             # porta do service
      targetPort: 8080     # porta do container
      protocol: TCP
